# bazel-starlib

./: .bazelrc  .bazelversion  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .md_link_check_config.json  .mergify.yml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_starlib_buildtools.bzl  bazel_versions.bzl  ci.bazelrc  deps.bzl  go.mod  go.sum  go_deps.bzl  package.json  shared.bazelrc  workspace_init_example.bzl  workspace_status.sh
bazeldoc/: BUILD.bazel  README.md  defs.bzl
bazeldoc/private/: BUILD.bazel  diff_test_for_provs.bzl  doc_for_provs.bzl  doc_utilities.bzl  providers.bzl  stardoc_for_prov.bzl  update_doc.bzl  write_doc.bzl  write_file_list.bzl  write_header.bzl
bzlformat/: BUILD.bazel  README.md  bzlformat.bzl  defs.bzl  deps.bzl
bzlformat/internal/: BUILD.bazel  bzlformat_format.bzl  bzlformat_missing_pkgs.bzl  bzlformat_pkg.bzl
bzlformat/private/: BUILD.bazel  bzlformat_format.bzl  bzlformat_lint_test.bzl  bzlformat_missing_pkgs.bzl  bzlformat_pkg.bzl
bzlformat/tools/: BUILD.bazel  buildifier.sh
bzllib/: BUILD.bazel  README.md  defs.bzl
bzllib/private/: BUILD.bazel  bazel_labels.bzl  filter_srcs.bzl  lists.bzl  src_utils.bzl
bzllib/rules/: BUILD.bazel  defs.bzl
bzllib/tests/: BUILD.bazel  lists_tests.bzl
bzlmod/: BUILD.bazel
bzlrelease/: BUILD.bazel  README.md  defs.bzl  generate_workspace_snippet.bzl
bzlrelease/private/: BUILD.bazel  create_release.bzl  generate_module_snippet.bzl  generate_release_notes.bzl  generate_workspace_snippet.bzl  hash_sha256.bzl  release_archive.bzl  update_readme.bzl
bzlrelease/tools/: BUILD.bazel  create_release.sh  create_release_tag.sh  generate_gh_changelog.sh  generate_git_archive.sh  generate_module_snippet.sh  generate_release_notes.sh  generate_sha256.sh  generate_workspace_snippet.sh  update_readme.sh
bzltidy/: BUILD.bazel  README.md  defs.bzl
bzltidy/private/: BUILD.bazel  check_tidy.sh  tidy.bzl  tidy.sh  tidy_all.bzl  tidy_all.sh
cmd/go_deps/: BUILD.bazel  README.md  main.go
doc/: BUILD.bazel  README.md  api.md  binary_pkg.md  content_test.md  execute_binary.md  generate_release_notes.md  generate_workspace_snippet.md  hash_sha256.md  rules.md  src_utils.md  update_readme.md  workspace_snippet.md  write_bazel_status_vars.md
doc/bazeldoc/: BUILD.bazel  README.md  api.md  build_rules_overview.md  doc_utilities.md  providers.md
doc/bzlformat/: BUILD.bazel  README.md  rules_and_macros_overview.md
doc/bzllib/: BUILD.bazel  README.md  api.md  bazel_labels.md  filter_srcs.md  lists.md  rules.md  src_utils.md
doc/bzlrelease/: BUILD.bazel  README.md  api.md  create_release.md  generate_release_notes.md  generate_workspace_snippet.md  hash_sha256.md  release_archive.md  rules.md  update_readme.md
doc/bzltidy/: BUILD.bazel  rules_and_macros_overview.md
doc/markdown/: BUILD.bazel  README.md  rules_and_macros_overview.md
doc/shlib/: BUILD.bazel  README.md  binary_pkg.md  execute_binary.md  rules.md
doc/updatesrc/: BUILD.bazel  README.md  api.md  how_to.md  providers_overview.md  rules_and_macros_overview.md  update_srcs.md
examples/: BUILD.bazel  examples.bzl
examples/bzlformat/: BUILD.bazel  README.md  simple_test.sh
examples/bzlmod_e2e/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/markdown/: BUILD.bazel  README.md
examples/toolchains/: BUILD.bazel
examples/tools/: BUILD.bazel
examples/updatesrc/: BUILD.bazel  README.md
lib/: BUILD.bazel  src_utils.bzl
lib/private/: BUILD.bazel  assertions.sh  fail.sh  git.sh  github.sh  source_bazel_status_vars.sh
markdown/: BUILD.bazel  README.md  default_markdown_link_check_config.json  defs.bzl  deps.bzl  github_markdown_toc_go_repositories.bzl  skip_external_link_checks_config.json
markdown/private/: BUILD.bazel  README.md  github_markdown_toc_go_repositories.bzl  markdown_check_links_test.bzl  markdown_generate_toc.bzl  markdown_link_check.bzl  markdown_pkg.bzl  markdown_register_node_deps.bzl  package.json
markdown/tools/: BUILD.bazel  check_links.sh  update_markdown_doc.sh  update_markdown_toc.sh
release/: BUILD.bazel  README.md  workspace_snippet.tmpl
rules/: BUILD.bazel  binary_pkg.bzl  content_test.bzl  content_test_equals.sh.template  execute_binary.bzl  filter_srcs.bzl  generate_release_notes.bzl  hash_sha256.bzl  update_readme.bzl  workspace_snippet.bzl  write_bazel_status_vars.bzl
rules/private/: BUILD.bazel  binary_pkg.bzl  decompress.sh.tmpl  execute_binary.bzl  generate_release_notes.bzl  generate_workspace_snippet.bzl  generate_workspace_snippet.sh  hash_sha256.bzl  update_readme.bzl  workspace_snippet.bzl  workspace_snippet.tmpl  write_bazel_status_vars.bzl
tests/: BUILD.bazel  content_test_tests.bzl  filter_srcs_tests.bzl  integration_test_common.bzl  setup_git_repo.sh  src_utils_tests.bzl
tests/bcr_tests/: BUILD.bazel  patches_test.sh
tests/bzlformat_tests/: BUILD.bazel
tests/bzllib_tests/: BUILD.bazel  filter_srcs_tests.bzl  src_utils_tests.bzl
tests/bzlrelease_tests/: BUILD.bazel
tests/bzltidy_tests/: BUILD.bazel  tidy_all_test.sh
tests/lib_tests/: BUILD.bazel  source_bazel_status_vars_test.sh
tests/markdown_tests/: BUILD.bazel  links.md  test.md
tests/repo_markdown_tests/: BUILD.bazel
tests/tools_tests/: BUILD.bazel  generate_fake_snippet.sh  generate_gh_changelog_test.sh  generate_git_archive_test.sh  generate_release_notes_test.sh  generate_sha256_test.sh  generate_workspace_init_example_test.sh  generate_workspace_snippet_test.sh  update_readme_test.sh  validate_release_tag_test.sh  write_bazel_status_vars_test.sh
tests/updatesrc_tests/: BUILD.bazel  letters.bzl
tools/: BUILD.bazel  create_release.sh  create_release_tag.sh  expand_workspace_status.sh  generate_gh_changelog.sh  generate_git_archive.sh  generate_git_changelog.sh  generate_release_notes.sh  generate_sha256.sh  generate_workspace_init_example.sh  generate_workspace_snippet.sh  get_gh_auth_token.sh  update_readme.sh  validate_release_tag.sh  workspace_status.sh  write_bazel_status_vars.sh
updatesrc/: BUILD.bazel  README.md  defs.bzl
(+358 files in other folders)
