load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "//bzlformat:defs.bzl",
    "bzlformat_missing_pkgs",
    "bzlformat_pkg",
)
load("//tests:integration_test_common.bzl", "INTEGRATION_TEST_TAGS")
load("//updatesrc:defs.bzl", "updatesrc_update_all")

# MARK: - Gazelle

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib//gazelle/bzl",
    ],
)

# gazelle:prefix github.com/cgrindel/bazel-starlib
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%bazel_starlib_go_dependencies",
        "-build_external=external",
        "-prune",
    ],
    command = "update-repos",
)

# MARK: - Bazel Starlark Lint and Formatting

bzlformat_pkg(name = "bzlformat")

bzlformat_missing_pkgs(
    name = "bzlformat_missing_pkgs",
)

# MARK: - Update Source Files

updatesrc_update_all(
    name = "update_all",
    targets_to_run = [
        "@contrib_rules_bazel_integration_test//tools:update_deleted_packages",
        ":bzlformat_missing_pkgs_fix",
        ":gazelle_update_repos",
        ":gazelle",
    ],
)

alias(
    name = "tidy",
    actual = ":update_all",
)

# MARK: - Markdown Files

package_group(
    name = "markdown_test_visibility",
    packages = [
        "//tests/repo_markdown_tests/...",
    ],
)

# GH140: Temporarily disable markdown while adding support for
# --incompatible_disallow_empty_glob.

# load("//markdown:defs.bzl", "markdown_pkg")

# markdown_pkg(
#     name = "markdown",
#     doc_files_visibility = ["//:markdown_test_visibility"],
# )

# MARK: - Integration Tests

package_group(
    name = "integration_test_visibility",
    packages = [
        "//examples/...",
        "//tests/...",
    ],
)

# Provides the *.bazlerc files for the example workspace integration tests.
filegroup(
    name = "shared_bazelrc_files",
    srcs = glob(["*.bazelrc"]),
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

# The example workspaces use local_repository to reference this workspace.
# This target collects all of the files needed for rules_spm to work in the
# child workspaces.
filegroup(
    name = "local_repository_files",
    srcs = [
        ":all_files",
        "//bazeldoc:all_files",
        "//bazeldoc/private:all_files",
        "//build:all_files",
        "//bzlformat:all_files",
        "//bzlformat/private:all_files",
        "//bzlformat/tools:all_files",
        "//bzlformat/tools/missing_pkgs:all_files",
        "//bzllib:all_files",
        "//bzllib/private:all_files",
        "//bzlrelease:all_files",
        "//bzlrelease/private:all_files",
        "//bzlrelease/tools:all_files",
        "//markdown:all_files",
        "//markdown/private:all_files",
        "//markdown/tools:all_files",
        "//shlib/lib:all_files",
        "//shlib/rules:all_files",
        "//shlib/rules/private:all_files",
        "//shlib/tools:all_files",
        "//updatesrc:all_files",
        "//updatesrc/private:all_files",
    ],
    visibility = [":integration_test_visibility"],
)

filegroup(
    name = "workspace_integration_test_files",
    srcs = [
        # The example workspaces reference the *.bazelrc files in the parent.
        "//:shared_bazelrc_files",

        # The example workspaces use local_repository to reference this
        # workspace.  This target collects all of the files needed for
        # rules_spm to work in the child workspaces.
        "//:local_repository_files",
    ],
    visibility = [":integration_test_visibility"],
)

test_suite(
    name = "all_smoke_integration_tests",
    tags = INTEGRATION_TEST_TAGS,
    tests = [
        "//examples/bzlformat:smoke_integration_tests",
        "//examples/markdown:smoke_integration_tests",
        "//examples/updatesrc:smoke_integration_tests",
        "//tests/bzlformat_tests/tools_tests/missing_pkgs_tests:smoke_integration_tests",
        "//tests/bzlrelease_tests:all_integration_tests",
        "//tests/shlib_tests/lib_tests/git_tests:integration_tests",
        "//tests/shlib_tests/lib_tests/github_tests:integration_tests",
        "//tests/updatesrc_tests:smoke_integration_tests",
    ],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "all_integration_tests",
    tags = INTEGRATION_TEST_TAGS,
    tests = [
        "//examples/bzlformat:integration_tests",
        "//examples/markdown:integration_tests",
        "//examples/updatesrc:integration_tests",
        "//tests/bzlformat_tests/tools_tests/missing_pkgs_tests:integration_tests",
        "//tests/bzlrelease_tests:all_integration_tests",
        "//tests/shlib_tests/lib_tests/git_tests:integration_tests",
        "//tests/shlib_tests/lib_tests/github_tests:integration_tests",
        "//tests/updatesrc_tests:integration_tests",
    ],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_starlib_buildtools",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "go_deps",
    srcs = ["go_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:deps"],
)

bzl_library(
    name = "bazel_starlib_buildtools",
    srcs = ["bazel_starlib_buildtools.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bazel_versions",
    srcs = ["bazel_versions.bzl"],
    visibility = ["//visibility:public"],
)
