module(
    name = "cgrindel_bazel_starlib",
    version = "0.11.0",
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_go", version = "0.37.0")
bazel_dep(name = "gazelle", version = "0.28.0")
bazel_dep(name = "stardoc", version = "0.5.3")
# Need buildifier-prebuilt or bazelbuild/buildtools
