module(
    name = "cgrindel_bazel_starlib",
    version = "0.11.0",
)

bazel_dep(
    name = "rules_go",
    version = "0.38.1",
    dev_dependency = True,
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "gazelle",
    version = "0.29.0",
    dev_dependency = True,
)
bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.4.1",
    dev_dependency = True,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(
    name = "stardoc",
    version = "0.5.3",
    repo_name = "io_bazel_stardoc",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.0.0.1",
)

# # Need buildifier-prebuilt or bazelbuild/buildtools

# buildtools_deps = use_extension(
#     "//bzlmod:extensions.bzl",
#     "install_buildtools_dependencies",
# )
# use_repo(
#     buildtools_deps,
#     "bazel_starlib_buildtools",
#     "com_github_bazelbuild_buildtools",
#     "com_google_protobuf",
# )
