load("//bzlformat:defs.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bazeldoc/private:doc_for_provs",
        "//bazeldoc/private:providers",
        "//bazeldoc/private:write_file_list",
        "//bazeldoc/private:write_header",
    ],
)
