load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat/internal:bzlformat_pkg.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzlformat/internal:bzlformat_format",
        "//bzlformat/internal:bzlformat_missing_pkgs",
        "//bzlformat/internal:bzlformat_pkg",
    ],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
