load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat/private:bzlformat_pkg.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzlformat/private:bzlformat_format",
        "//bzlformat/private:bzlformat_missing_pkgs",
        "//bzlformat/private:bzlformat_pkg",
    ],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
