load("//bzlformat:defs.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzlformat_pkg(name = "bzlformat")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzllib/private:filter_srcs",
        "//bzllib/private:src_utils",
    ],
)
