load("@cgrindel_rules_bzlformat//bzlformat:defs.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzlrelease/private:create_release",
        "//bzlrelease/private:generate_release_notes",
        "//bzlrelease/private:generate_workspace_snippet",
        "//bzlrelease/private:hash_sha256",
        "//bzlrelease/private:update_readme",
    ],
)
