load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzlrelease/private:create_release",
        "//bzlrelease/private:generate_release_notes",
        "//bzlrelease/private:generate_workspace_snippet",
        "//bzlrelease/private:hash_sha256",
        "//bzlrelease/private:update_readme",
    ],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "release_files",
    srcs = [":all_files"],
    prefix = package_name(),
    visibility = ["//:__subpackages__"],
)
