load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzlrelease/private:create_release",
        "//bzlrelease/private:generate_module_snippet",
        "//bzlrelease/private:generate_release_notes",
        "//bzlrelease/private:generate_workspace_snippet",
        "//bzlrelease/private:hash_sha256",
        "//bzlrelease/private:release_archive",
        "//bzlrelease/private:update_readme",
    ],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
